hikey: wifi: Set config_wifi_framework_scan_interval to 10 sec
Change-Id: I7ce864fb9693221e7997d0811f5d0a9fa074d990
Signed-off-by: Dmitry Shmidt <dimitrysh@google.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -30,6 +30,9 @@
     <!-- Separate software navigation bar required on this device. -->
     <bool name="config_showNavigationBar">true</bool>
 
+    <!-- Integer indicating the framework scan interval in milliseconds. -->
+    <integer translatable="false" name="config_wifi_framework_scan_interval">10000</integer>
+
     <!-- XXXXX NOTE THE FOLLOWING RESOURCES USE THE WRONG NAMING CONVENTION.
          Please don't copy them, copy anything else. -->
 
